# python-uv-template

./: README.md  pyproject.toml
src/my_uv_template/: __init__.py  processor.py
tests/: test_processor.py
