[project]
name = "my-uv-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ling", email = "ling@abc.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-uv-template = "my_uv_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

